--- a/HelloTest.html
+++ b/HelloTest.html
@@ -12,6 +12,12 @@
         a{
             border: 3px solid red;
         }
+        .redText{
+            color: red;
+        }
+        .yellowBackgroud{
+            background-color: yellow;
+        }
     </style>
 </head>
 <body>
